--- a/public/views/partials/head.ejs
+++ b/public/views/partials/head.ejs
@@ -1,3 +1,21 @@
-<title>ELSA title</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="ELSA">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>ELSA</title>
+<link rel="shortcut icon" href="/elsa/theme/images/chip.png">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link href="/elsa/theme/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href="/elsa/theme/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+<link href="/elsa/theme/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+<!-- jVectorMap -->
+<link href="/elsa/theme/css/maps/jquery-jvectormap-2.0.3.css" rel="stylesheet"/>
+<link href="/elsa/theme/css/custom.min.css" rel="stylesheet">
+
+<!-- Datatables -->
+<link href="/elsa/theme/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+<link href="/elsa/theme/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
+<link href="/elsa/theme/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
+<link href="/elsa/theme/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
+<link href="/elsa/theme/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
+<link href="/elsa/elsa.css" rel="stylesheet">
