--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -1,5 +1,8 @@
-<div class="footer">
-    <div class="container">
-        <p class="text-center text-muted">ELSA footer of the page</p>
+<!-- footer content -->
+<footer>
+    <div class="pull-right">
+        2017
     </div>
-</div>
+    <div class="clearfix"></div>
+</footer>
+<!-- /footer content -->
